@@ -941,7 +941,7 @@ DiagramAppearancePreferencePage_displayHeaderLabel = Display header
 DiagramAppearancePreferencePage_hideConnectorLabelIconsLabel =  Hide label icons on connectors
 DiagramAppearancePreferencePage_hideShapeLabelIconsLabel =  Hide label icons on shapes
 DiagramAppearancePreferencePage_labelIconsGroupText = Label icons (does not affect existing elements of opened diagrams)
-DiagramAppearancePreferencePage_displayUserFixedColorsInPaletteLabel = Display viewpoint colors
+DiagramAppearancePreferencePage_displayUserFixedColorsInPaletteLabel = Display suggested colors in color palette
 DiagramConnectionsPreferencePage_showEdgeLabelLinkOnSelect = Show link between edge and its labels on selection
 DiagramConnectionsPreferencePage_defaultValuesGroup_title = User specific default values. These settings apply to all diagrams (does not affect existing elements)
 DiagramConnectionsPreferencePage_enableLineStyleOverride_label = Line style
