@@ -183,8 +183,19 @@
 		</p>
 		<h2 id="sirius7.4.1">Changes in Sirius  Desktop 7.4.1</h2>
 		<h3 id="UserVisibleChanges">User-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-info">Modified</span> The UI preference 
+				<code>SiriusUIPreferencesKeys.PREF_DISPLAY_VSM_USER_FIXED_COLOR_IN_PALETTE</code> has been renamed from &#8220;Display viewpoints colors&#8221; to &#8220;Display suggested colors in color palette&#8221;. 
+			</li>
+		</ul>
 		<h3 id="SpecifierVisibleChanges">Specifier-Visible Changes</h3>
 		<h3 id="DeveloperVisibleChanges">Developer-Visible Changes</h3>
+		<ul>
+			<li><span class="label label-info">Modified</span> The method 
+				<code>org.eclipse.sirius.diagram.ui.tools.api.color.ColorManager.collectVsmColors(Session)</code> has replaced 
+				<code>Map&lt;String, RGB&gt; collectVsmAndDefaultColors(Session session)</code>.
+			</li>
+		</ul>
 		<h2 id="sirius7.4.0">Changes in Sirius  Desktop 7.4.0</h2>
 		<h3 id="UserVisibleChanges2">User-Visible Changes</h3>
 		<ul>
