@@ -2256,10 +2256,9 @@
 		</p> 
 		<img border="0" src="images/preferences_sirius_diagram_appearance.png"/>
 		<p>The 
-			<em>Display viewpoint colors</em> preference allows, if checked, to display, in the color Palette, the fixed colors that are defined in the activated viewpoints.
-			<br/>The viewpoint colors are displayed after the grayed colors and before the colors of the rainbow.
+			<em>Display suggested colors in color palette</em> preference allows, if checked, to display, in the color Palette, the suggested colors that are defined in the Palette of the activated viewpoints.
 			<br/>  
-			<img border="0" src="images/PropertiesView_Appearance_ColorPalette_ViewpointColors.png"/>
+			<img border="0" src="images/PropertiesView_Appearance_ColorPalette_SuggestedColors.png"/>
 		</p>
 		<p>The 
 			<em>Authorize decoration overlapping</em> preference lets, if checked, the decorations of different positions overlapping each other or displaying outside the diagram element bounding. If unchecked, decorations may be grouped in a 
